# large_scale_mmdma

./: README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish_to_pypi.yml
examples/: benchmark.ipynb  tutorial101.ipynb
lsmmdma/: __init__.py  initializers.py  main.py  metrics.py  mmdma_functions.py  train.py  version.py
lsmmdma/data/: __init__.py  checkpointer.py  data_pipeline.py
mmdma/: __init__.py  initializers.py  main.py  metrics.py  mmdma_functions.py  mmdma_test.py  requirements.txt  train.py  version.py
mmdma/data/: checkpointer.py  data_pipeline.py
tests/: mmdma_test.py
