[metadata]
name                          = large_scale_mmdma
version                       = 0.0.1
licens                        = Apache 2.0
license_files                 = LICENSE
author                        = Google LLC
author_email                  = lpapaxanthos@google.com
description                   = Scaling MMD-MA to hundreds of thousands of samples.
keywords                      = kernel, data integration, pytorch
long_description              = file: README.md
long_description_content_type = text/markdown
url                           = https://github.com/google-research/large-scale-mmdma
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
exclude =
    tests, docs, images